[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
# 调试工具
bevy-inspector-egui = "0.11.0"
# 调试工具
bevy_editor_pls = {git="https://github.com/jakobhellermann/bevy_editor_pls"}
rand = "0.8.5"


# 增加编译速度,开发时候
[profile.dev.package."*"]
opt-level = 3
